1599079262 | 63 files | M bin/version.txt,  M drivers/lighthouse/resources/webinterface/pairing.html,  M resources/config/vrcompositor_actions.json,  M resources/webinterface/dashboard/bindingcallouts.html,  M resources/webinterface/dashboard/controllerbinding.html,  M resources/webinterface/dashboard/debugcommands.html,  M resources/webinterface/dashboard/fallback.html,  M resources/webinterface/dashboard/keyboard.html,  M resources/webinterface/dashboard/localization/vrmonitor_brazilian.json,  M resources/webinterface/dashboard/localization/vrmonitor_bulgarian.json,  M resources/webinterface/dashboard/localization/vrmonitor_czech.json,  M resources/webinterface/dashboard/localization/vrmonitor_danish.json,  M resources/webinterface/dashboard/localization/vrmonitor_dutch.json,  M resources/webinterface/dashboard/localization/vrmonitor_finnish.json,  M resources/webinterface/dashboard/localization/vrmonitor_french.json,  M resources/webinterface/dashboard/localization/vrmonitor_german.json,  M resources/webinterface/dashboard/locali
https://steamdb.info/patchnotes/5494827/

--- a/resources/webinterface/dashboard/localization/vrmonitor_brazilian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_brazilian.json
@@ -194,7 +194,7 @@
 	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Translúcido",
 	"Settings_Camera_RoomViewStyle_VideoOpaque": "Opaco",
 	"Settings_Camera_RoomView3D_Experimental": "A visualização de cômodo 3D é experimental.",
-	"Settings_Camera_RoomView3D_Unsupported": "Headset não compatível com a visualização de cômodo 3D.",
+	"Settings_Camera_RoomView3D_Unsupported": "O headset ou o sistema não é compatível com a visualização de cômodo 3D.",
 	"Settings_CameraTest": "Testar câmera e desempenho",
 	"Settings_StartCameraTest": "Iniciar teste",
 	"CameraTest_CheckingCamera": "Verificar câmera...",
@@ -330,6 +330,15 @@
 	"Settings_Drivers_UnblockAll": "Desbloquear todos",
 	"Settings_Drivers_UnblockAllTip": "AVISO: recomendamos desbloquear e testar um módulo por vez.",
 	"Settings_Drivers_SomeBlocked": "Devido a um travamento recente, alguns módulos do SteamVR foram bloqueados automaticamente.",
+	"Settings_CurrentOpenXRRuntime_None": "Nenhum",
+	"Settings_CurrentOpenXRRuntime": "Implementação do OpenXR em uso:",
+	"Settings_SetAsOpenXRRuntime": "Usar SteamVR como implementação do OpenXR",
+	"OpenXR_AnotherSteamVR": "Outra cópia do SteamVR",
+	"OpenXR_SteamVR": "SteamVR",
+	"OpenXR_None": "Nenhum",
+	"OpenXR_Error": "Erro ao buscar componente",
+	"OpenXR_OculusRuntime": "Oculus",
+	"OpenXR_WindowsMixedReality": "Windows Mixed Reality",
 	"TestControllerTitle": "Testando o controle %1$s",
 	"TestController_NoController": "Ligue um controle para testá-lo."
 }
