--- a/resources/webinterface/dashboard/localization/vrmonitor_bulgarian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_bulgarian.json
@@ -193,8 +193,8 @@
 	"Settings_Camera_RoomViewStyle_EdgeB": "Цветни призраци",
 	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Полупрозрачна обработка",
 	"Settings_Camera_RoomViewStyle_VideoOpaque": "Непрозрачна обработка",
-	"Settings_Camera_RoomView3D_Experimental": "Триизмерният стаен изглед е експериментален.",
-	"Settings_Camera_RoomView3D_Unsupported": "Триизмерният стаен изглед не се поддържа на този ВР шлем.",
+	"Settings_Camera_RoomView3D_Experimental": "„3 измерният стаен изглед“ е експериментален.",
+	"Settings_Camera_RoomView3D_Unsupported": "„3 измереният стаен изглед“ не се поддържа на този/тази ВР шлем/системна конфигурация.",
 	"Settings_CameraTest": "Тестване на честотата за камерата",
 	"Settings_StartCameraTest": "Стартиране на изпитанието",
 	"CameraTest_CheckingCamera": "Проверяване на камера...",
@@ -330,6 +330,15 @@
 	"Settings_Drivers_UnblockAll": "Деблокиране на всички",
 	"Settings_Drivers_UnblockAllTip": "ЗАБЕЛЕЖКА: Препоръчва се деблокирането и тестването на допълненията едно по едно.",
 	"Settings_Drivers_SomeBlocked": "Вследствие на скорошен срив някои SteamVR допълнения бяха автоматично блокирани.",
+	"Settings_CurrentOpenXRRuntime_None": "Няма",
+	"Settings_CurrentOpenXRRuntime": "Текуща OpenXR изпълнимата среда:",
+	"Settings_SetAsOpenXRRuntime": "Задаване на SteamVR като OpenXR изпълнима среда",
+	"OpenXR_AnotherSteamVR": "Друго копие на SteamVR",
+	"OpenXR_SteamVR": "SteamVR",
+	"OpenXR_None": "Няма",
+	"OpenXR_Error": "Грешка при намиране на изпълнимата среда",
+	"OpenXR_OculusRuntime": "Oculus",
+	"OpenXR_WindowsMixedReality": "Windows смесена реалност",
 	"TestControllerTitle": "Тестване на контролер %1$s",
 	"TestController_NoController": "Включете контролер, за да го тествате."
 }
