--- a/resources/webinterface/dashboard/localization/vrmonitor_dutch.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_dutch.json
@@ -194,7 +194,7 @@
 	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Doorzichtige doorvoer",
 	"Settings_Camera_RoomViewStyle_VideoOpaque": "Ondoorzichtige doorvoer",
 	"Settings_Camera_RoomView3D_Experimental": "3D-kamerweergave is experimenteel.",
-	"Settings_Camera_RoomView3D_Unsupported": "3D-kamerweergave wordt door deze headset niet ondersteund.",
+	"Settings_Camera_RoomView3D_Unsupported": "3D-kamerweergave wordt niet ondersteund op deze headset- en systeemconfiguratie.",
 	"Settings_CameraTest": "Camera en prestaties testen",
 	"Settings_StartCameraTest": "Test starten",
 	"CameraTest_CheckingCamera": "Camera controleren...",
@@ -330,6 +330,15 @@
 	"Settings_Drivers_UnblockAll": "Alles deblokkeren",
 	"Settings_Drivers_UnblockAllTip": "OPMERKING: Het wordt aanbevolen om één uitbreiding per keer te deblokkeren en te testen.",
 	"Settings_Drivers_SomeBlocked": "Door een recentelijke crash zijn sommige SteamVR-uitbreidingen automatisch geblokkeerd.",
+	"Settings_CurrentOpenXRRuntime_None": "Geen",
+	"Settings_CurrentOpenXRRuntime": "Huidige OpenXR runtime:",
+	"Settings_SetAsOpenXRRuntime": "SteamVR instellen als OpenXR runtime",
+	"OpenXR_AnotherSteamVR": "Nog een kopie van SteamVR",
+	"OpenXR_SteamVR": "SteamVR",
+	"OpenXR_None": "Geen",
+	"OpenXR_Error": "Fout bij het vinden van runtime",
+	"OpenXR_OculusRuntime": "Oculus",
+	"OpenXR_WindowsMixedReality": "Windows Mixed Reality",
 	"TestControllerTitle": "Controller %1$s testen",
 	"TestController_NoController": "Controller aanzetten om te testen."
 }
