--- a/resources/webinterface/dashboard/localization/vrmonitor_finnish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_finnish.json
@@ -194,7 +194,7 @@
 	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Läpikuultava tila",
 	"Settings_Camera_RoomViewStyle_VideoOpaque": "Läpikuultamaton tila",
 	"Settings_Camera_RoomView3D_Experimental": "3D-huonenäkymä on kokeellinen.",
-	"Settings_Camera_RoomView3D_Unsupported": "3D-huonenäkymä ei ole tuettu näillä VR-laseilla.",
+	"Settings_Camera_RoomView3D_Unsupported": "3D-huonenäkymää ei tueta näillä VR-laseilla tai järjestelmämäärityksillä.",
 	"Settings_CameraTest": "Testaa kameraa ja suorituskykyä",
 	"Settings_StartCameraTest": "Aloita testi",
 	"CameraTest_CheckingCamera": "Tarkistetaan kameraa...",
@@ -330,6 +330,15 @@
 	"Settings_Drivers_UnblockAll": "Poista esto kaikista",
 	"Settings_Drivers_UnblockAllTip": "HUOMAA: suosittelemme, että poistat yhden eston ja testaat yhden lisäosan kerrallaan.",
 	"Settings_Drivers_SomeBlocked": "Viimeaikaisen kaatumisongelman vuoksi jotkut SteamVR-lisäosat on automaattisesti estetty.",
+	"Settings_CurrentOpenXRRuntime_None": "Ei mitään",
+	"Settings_CurrentOpenXRRuntime": "Nykyinen OpenXR Runtime:",
+	"Settings_SetAsOpenXRRuntime": "Aseta SteamVR OpenXR Runtimeen",
+	"OpenXR_AnotherSteamVR": "Toinen SteamVR:n kopio",
+	"OpenXR_SteamVR": "SteamVR",
+	"OpenXR_None": "Ei mitään",
+	"OpenXR_Error": "Runtimea ei löydy",
+	"OpenXR_OculusRuntime": "Oculus",
+	"OpenXR_WindowsMixedReality": "Windows Mixed Reality",
 	"TestControllerTitle": "Testataan ohjainta %1$s",
 	"TestController_NoController": "Laita ohjain päälle testataksesi sitä."
 }
