--- a/resources/webinterface/dashboard/localization/vrmonitor_german.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_german.json
@@ -194,7 +194,7 @@
 	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Transparenter Übergang",
 	"Settings_Camera_RoomViewStyle_VideoOpaque": "Undurchsichtiger Übergang",
 	"Settings_Camera_RoomView3D_Experimental": "Die 3D-Raumansicht ist experimentell.",
-	"Settings_Camera_RoomView3D_Unsupported": "Die 3D-Raumansicht wird von diesem VR-Headset nicht unterstützt.",
+	"Settings_Camera_RoomView3D_Unsupported": "Die 3D-Raumansicht wird von diesem VR-Headset bzw. dieser Systemkonfiguriation nicht unterstützt.",
 	"Settings_CameraTest": "Kamera und Leistung testen",
 	"Settings_StartCameraTest": "Test starten",
 	"CameraTest_CheckingCamera": "Kamera wird überprüft…",
@@ -330,6 +330,15 @@
 	"Settings_Drivers_UnblockAll": "Alle entsperren",
 	"Settings_Drivers_UnblockAllTip": "HINWEIS: Es wird empfohlen, nur eine Erweiterung auf einmal zu entsperren und zu testen.",
 	"Settings_Drivers_SomeBlocked": "Aufgrund des kürzlichen Absturzes wurden einige SteamVR-Erweiterungen automatisch gesperrt.",
+	"Settings_CurrentOpenXRRuntime_None": "Leer",
+	"Settings_CurrentOpenXRRuntime": "Aktuelle OpenXR-Laufzeitumgebung:",
+	"Settings_SetAsOpenXRRuntime": "SteamVR als OpenXR-Laufzeitumgebung festlegen",
+	"OpenXR_AnotherSteamVR": "Eine weitere Kopie von SteamVR",
+	"OpenXR_SteamVR": "SteamVR",
+	"OpenXR_None": "Leer",
+	"OpenXR_Error": "Laufzeitumgebung kann nicht gefunden werden.",
+	"OpenXR_OculusRuntime": "Oculus",
+	"OpenXR_WindowsMixedReality": "Windows Mixed Reality",
 	"TestControllerTitle": "Controller %1$s wird getestet …",
 	"TestController_NoController": "Schalten Sie einen Controller an, um ihn zu testen."
 }
