--- a/resources/webinterface/dashboard/localization/vrmonitor_greek.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_greek.json
@@ -194,7 +194,7 @@
 	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Διαφανές διαχωριστικό",
 	"Settings_Camera_RoomViewStyle_VideoOpaque": "Αδιαφανές διαχωριστικό",
 	"Settings_Camera_RoomView3D_Experimental": "Η 3D προβολή δωματίου είναι πειραματική.",
-	"Settings_Camera_RoomView3D_Unsupported": "Η 3D προβολή δωματίου δεν υποστηρίζεται σε αυτό το headset.",
+	"Settings_Camera_RoomView3D_Unsupported": "Η 3D προβολή δωματίου δεν υποστηρίζεται σε αυτό το headset ή στη διαμόρφωση συστήματος.",
 	"Settings_CameraTest": "Δοκιμή κάμερας και επιδόσεων",
 	"Settings_StartCameraTest": "Έναρξη δοκιμής",
 	"CameraTest_CheckingCamera": "Έλεγχος κάμερας...",
@@ -330,6 +330,15 @@
 	"Settings_Drivers_UnblockAll": "Άρση αποκλεισμού όλων",
 	"Settings_Drivers_UnblockAllTip": "Σημείωση: Προτείνεται η άρση αποκλεισμού και ο έλεγχος ενός προσθέτου τη φορά.",
 	"Settings_Drivers_SomeBlocked": "Λόγω πρόσφατου απρόσμενου τερματισμού, μερικά πρόσθετα SteamVR έχουν αποκλειστεί αυτόματα.",
+	"Settings_CurrentOpenXRRuntime_None": "Καμία",
+	"Settings_CurrentOpenXRRuntime": "Τρέχων χρόνος εκτέλεσης OpenXR:",
+	"Settings_SetAsOpenXRRuntime": "Ορίστε το SteamVR ως χρόνο εκτέλεσης OpenXR",
+	"OpenXR_AnotherSteamVR": "Ένα άλλο αντίγραφο του SteamVR",
+	"OpenXR_SteamVR": "SteamVR",
+	"OpenXR_None": "Κανένας",
+	"OpenXR_Error": "Σφάλμα εύρεσης χρόνου εκτέλεσης",
+	"OpenXR_OculusRuntime": "Oculus",
+	"OpenXR_WindowsMixedReality": "Windows Mixed Reality",
 	"TestControllerTitle": "ΕΛΕΓΧΟΣ ΧΕΙΡΙΣΤΗΡΙΟΥ %1$s",
 	"TestController_NoController": "Ενεργοποιήστε ένα χειριστήριο για να το ελέγξετε."
 }
