--- a/resources/webinterface/dashboard/localization/vrmonitor_hungarian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_hungarian.json
@@ -194,7 +194,7 @@
 	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Átlátszó áteresztés",
 	"Settings_Camera_RoomViewStyle_VideoOpaque": "Nem átlátszó áteresztés",
 	"Settings_Camera_RoomView3D_Experimental": "A 3D szobanézet kísérleti jellegű.",
-	"Settings_Camera_RoomView3D_Unsupported": "A 3D szobanézet ezen a fejszetten nem támogatott.",
+	"Settings_Camera_RoomView3D_Unsupported": "A 3D szobanézet nem támogatott ezen a fejszetten, illetve rendszerkonfiguráción.",
 	"Settings_CameraTest": "Kamera és teljesítmény tesztelése",
 	"Settings_StartCameraTest": "Teszt megkezdése",
 	"CameraTest_CheckingCamera": "Kamera ellenőrzése...",
@@ -330,6 +330,15 @@
 	"Settings_Drivers_UnblockAll": "Összes feloldása",
 	"Settings_Drivers_UnblockAllTip": "MEGJEGYZÉS: egyszerre egy kiegészítő feloldása és tesztelése javasolt.",
 	"Settings_Drivers_SomeBlocked": "Egy közelmúltbeli összeomlás miatt néhány SteamVR kiegészítő automatikusan blokkolva lett.",
+	"Settings_CurrentOpenXRRuntime_None": "Nincs",
+	"Settings_CurrentOpenXRRuntime": "Jelenlegi OpenXR futásidejű:",
+	"Settings_SetAsOpenXRRuntime": "SteamVR beállítása OpenXR futásidejűként",
+	"OpenXR_AnotherSteamVR": "A SteamVR egy másolata",
+	"OpenXR_SteamVR": "SteamVR",
+	"OpenXR_None": "Nincs",
+	"OpenXR_Error": "Hiba a futásidejű keresésekor",
+	"OpenXR_OculusRuntime": "Oculus",
+	"OpenXR_WindowsMixedReality": "Windows Mixed Reality",
 	"TestControllerTitle": "%1$s játékvezérlő tesztelése",
 	"TestController_NoController": "A teszteléshez kapcsolj be egy játékvezérlőt."
 }
