--- a/resources/webinterface/dashboard/localization/vrmonitor_italian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_italian.json
@@ -193,8 +193,8 @@
 	"Settings_Camera_RoomViewStyle_EdgeB": "Sagome colorate",
 	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Visuale traslucida",
 	"Settings_Camera_RoomViewStyle_VideoOpaque": "Visuale opaca",
-	"Settings_Camera_RoomView3D_Experimental": "La vista stanza in 3D è sperimentale.",
-	"Settings_Camera_RoomView3D_Unsupported": "La vista stanza in 3D non è supportata su questo visore.",
+	"Settings_Camera_RoomView3D_Experimental": "La vista stanza 3D è sperimentale.",
+	"Settings_Camera_RoomView3D_Unsupported": "La vista stanza 3D non è supportata da questo visore/questa configurazione di sistema.",
 	"Settings_CameraTest": "Prova telecamera e prestazioni",
 	"Settings_StartCameraTest": "Inizia test",
 	"CameraTest_CheckingCamera": "Verifica telecamera in corso...",
@@ -330,6 +330,15 @@
 	"Settings_Drivers_UnblockAll": "Sblocca tutti",
 	"Settings_Drivers_UnblockAllTip": "NOTA: consigliamo di sbloccare e testare un solo add-on alla volta.",
 	"Settings_Drivers_SomeBlocked": "A causa di un recente crash, alcuni add-on di Steam VR sono stati automaticamente bloccati.",
+	"Settings_CurrentOpenXRRuntime_None": "Nessuno",
+	"Settings_CurrentOpenXRRuntime": "Runtime OpenXR attuale:",
+	"Settings_SetAsOpenXRRuntime": "Imposta SteamVR come Runtime OpenXR",
+	"OpenXR_AnotherSteamVR": "Un'altra copia di SteamVR",
+	"OpenXR_SteamVR": "SteamVR",
+	"OpenXR_None": "Nessuno",
+	"OpenXR_Error": "Errore di rilevamento runtime",
+	"OpenXR_OculusRuntime": "Oculus",
+	"OpenXR_WindowsMixedReality": "Windows Mixed Reality",
 	"TestControllerTitle": "Test del controller %1$s in corso",
 	"TestController_NoController": "Accendi un controller per testarlo."
 }
