--- a/resources/webinterface/dashboard/localization/vrmonitor_japanese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_japanese.json
@@ -193,8 +193,8 @@
 	"Settings_Camera_RoomViewStyle_EdgeB": "Colored Ghosts",
 	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Translucent Pass-Through",
 	"Settings_Camera_RoomViewStyle_VideoOpaque": "Opaque Pass-Through",
-	"Settings_Camera_RoomView3D_Experimental": "3-D Room View is experimental.",
-	"Settings_Camera_RoomView3D_Unsupported": "3-D Room View is not supported on this headset.",
+	"Settings_Camera_RoomView3D_Experimental": "Room View 3D is experimental.",
+	"Settings_Camera_RoomView3D_Unsupported": "Room View 3D is not supported on this headset / system configuration.",
 	"Settings_CameraTest": "カメラとパフォーマンスをテストする",
 	"Settings_StartCameraTest": "テスト開始",
 	"CameraTest_CheckingCamera": "カメラをチェック中...",
@@ -330,6 +330,15 @@
 	"Settings_Drivers_UnblockAll": "すべてブロック解除",
 	"Settings_Drivers_UnblockAllTip": "注：アドオンのブロック解除とテストは一度に1つを推奨しています。",
 	"Settings_Drivers_SomeBlocked": "最近のクラッシュにより、一部のSteamVRのアドオンは自動的にブロックされています。",
+	"Settings_CurrentOpenXRRuntime_None": "None",
+	"Settings_CurrentOpenXRRuntime": "Current OpenXR Runtime:",
+	"Settings_SetAsOpenXRRuntime": "Set SteamVR as OpenXR Runtime",
+	"OpenXR_AnotherSteamVR": "Another copy of SteamVR",
+	"OpenXR_SteamVR": "SteamVR",
+	"OpenXR_None": "None",
+	"OpenXR_Error": "Error Finding Runtime",
+	"OpenXR_OculusRuntime": "Oculus",
+	"OpenXR_WindowsMixedReality": "Windows Mixed Reality",
 	"TestControllerTitle": "コントローラ%1$sをテスト中",
 	"TestController_NoController": "コントローラの電源を入れてテストします。"
 }
