--- a/resources/webinterface/dashboard/localization/vrmonitor_korean.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_korean.json
@@ -193,8 +193,8 @@
 	"Settings_Camera_RoomViewStyle_EdgeB": "고스팅 처리로 색상 표시",
 	"Settings_Camera_RoomViewStyle_VideoTranslucent": "투명 통과",
 	"Settings_Camera_RoomViewStyle_VideoOpaque": "불투명 통과",
-	"Settings_Camera_RoomView3D_Experimental": "3-D 방 보기는 시험 중입니다.",
-	"Settings_Camera_RoomView3D_Unsupported": "3-D 방 보기는 이 헤드셋에서 지원되지 않습니다.",
+	"Settings_Camera_RoomView3D_Experimental": "Room View 3D is experimental.",
+	"Settings_Camera_RoomView3D_Unsupported": "Room View 3D is not supported on this headset / system configuration.",
 	"Settings_CameraTest": "카메라 및 성능 테스트",
 	"Settings_StartCameraTest": "테스트 시작",
 	"CameraTest_CheckingCamera": "카메라 확인 중...",
@@ -330,6 +330,15 @@
 	"Settings_Drivers_UnblockAll": "모두 차단",
 	"Settings_Drivers_UnblockAllTip": "참고: 한 번에 하나의 애드온을 차단 해제하고 테스트할 것을 권장합니다.",
 	"Settings_Drivers_SomeBlocked": "최근 크래시로 인해 일부 SteamVR 애드온이 자동 차단되었습니다.",
+	"Settings_CurrentOpenXRRuntime_None": "None",
+	"Settings_CurrentOpenXRRuntime": "Current OpenXR Runtime:",
+	"Settings_SetAsOpenXRRuntime": "Set SteamVR as OpenXR Runtime",
+	"OpenXR_AnotherSteamVR": "Another copy of SteamVR",
+	"OpenXR_SteamVR": "SteamVR",
+	"OpenXR_None": "None",
+	"OpenXR_Error": "Error Finding Runtime",
+	"OpenXR_OculusRuntime": "Oculus",
+	"OpenXR_WindowsMixedReality": "Windows Mixed Reality",
 	"TestControllerTitle": "컨트롤러 테스트 %1$s",
 	"TestController_NoController": "컨트롤러를 켜서 테스트하기"
 }
