--- a/resources/webinterface/dashboard/localization/vrmonitor_polish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_polish.json
@@ -194,7 +194,7 @@
 	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Przejrzyste przejście",
 	"Settings_Camera_RoomViewStyle_VideoOpaque": "Nieprzejrzyste przejście",
 	"Settings_Camera_RoomView3D_Experimental": "Widok pokoju 3D jest eksperymentalny.",
-	"Settings_Camera_RoomView3D_Unsupported": "Widok pokoju 3D nie jest obsługiwany dla tych gogli.",
+	"Settings_Camera_RoomView3D_Unsupported": "Widok pokoju 3D nie jest obsługiwany dla tych gogli/konfiguracji systemu.",
 	"Settings_CameraTest": "Przetestuj kamerę i wydajność",
 	"Settings_StartCameraTest": "Rozpocznij test",
 	"CameraTest_CheckingCamera": "Sprawdzanie kamery...",
@@ -330,6 +330,15 @@
 	"Settings_Drivers_UnblockAll": "Odblokuj wszystkie",
 	"Settings_Drivers_UnblockAllTip": "UWAGA: zalecane jest odblokowanie i przetestowanie każdego dodatku pojedynczo.",
 	"Settings_Drivers_SomeBlocked": "Z powodu niedawnego oczekiwanego zamknięcia niektóre dodatki SteamVR zostały automatycznie zablokowane.",
+	"Settings_CurrentOpenXRRuntime_None": "Brak",
+	"Settings_CurrentOpenXRRuntime": "Obecne środowisko uruchomieniowe OpenXR:",
+	"Settings_SetAsOpenXRRuntime": "Ustaw SteamVR jako środowisko uruchomieniowe OpenXR",
+	"OpenXR_AnotherSteamVR": "Kolejna kopia SteamVR",
+	"OpenXR_SteamVR": "SteamVR",
+	"OpenXR_None": "Brak",
+	"OpenXR_Error": "Błąd szukania środowiska uruchomieniowego",
+	"OpenXR_OculusRuntime": "Oculus",
+	"OpenXR_WindowsMixedReality": "Windows Mixed Reality",
 	"TestControllerTitle": "Testowanie kontrolera „%1$s”",
 	"TestController_NoController": "Włącz kontroler, by go przetestować."
 }
