--- a/resources/webinterface/dashboard/localization/vrmonitor_romanian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_romanian.json
@@ -193,8 +193,8 @@
 	"Settings_Camera_RoomViewStyle_EdgeB": "Colored Ghosts",
 	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Translucent Pass-Through",
 	"Settings_Camera_RoomViewStyle_VideoOpaque": "Opaque Pass-Through",
-	"Settings_Camera_RoomView3D_Experimental": "3-D Room View is experimental.",
-	"Settings_Camera_RoomView3D_Unsupported": "3-D Room View is not supported on this headset.",
+	"Settings_Camera_RoomView3D_Experimental": "Vizualizarea 3D a camerei este experimentală.",
+	"Settings_Camera_RoomView3D_Unsupported": "Vizualizarea 3D a camerei nu este posibilă pentru această configurație a căștii sau sistemului.",
 	"Settings_CameraTest": "Test camera and performance",
 	"Settings_StartCameraTest": "Start Test",
 	"CameraTest_CheckingCamera": "Checking camera...",
@@ -330,6 +330,15 @@
 	"Settings_Drivers_UnblockAll": "Deblochează toate",
 	"Settings_Drivers_UnblockAllTip": "NOTĂ: Se recomandă deblocarea și testarea extensiilor una câte una.",
 	"Settings_Drivers_SomeBlocked": "Datorită unui crash recent, unele extensii RV Steam au fost blocate automat.",
+	"Settings_CurrentOpenXRRuntime_None": "Nimic",
+	"Settings_CurrentOpenXRRuntime": "Runtime OpenXR actual:",
+	"Settings_SetAsOpenXRRuntime": "Configurează SteamVR ca Runtime OpenXR",
+	"OpenXR_AnotherSteamVR": "O altă copie a SteamVR",
+	"OpenXR_SteamVR": "SteamVR",
+	"OpenXR_None": "Nimic",
+	"OpenXR_Error": "Eroare la găsirea Runtime",
+	"OpenXR_OculusRuntime": "Oculus",
+	"OpenXR_WindowsMixedReality": "Windows Mixed Reality",
 	"TestControllerTitle": "Testing Controller %1$s",
 	"TestController_NoController": "Turn on a controller to test it."
 }
