--- a/resources/webinterface/dashboard/localization/vrmonitor_russian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_russian.json
@@ -194,7 +194,7 @@
 	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Полупрозрачный обзор окружения",
 	"Settings_Camera_RoomViewStyle_VideoOpaque": "Непрозрачный обзор окружения",
 	"Settings_Camera_RoomView3D_Experimental": "3D-обзор комнаты — экспериментальная функция.",
-	"Settings_Camera_RoomView3D_Unsupported": "3D-обзор комнаты не поддерживается на этом шлеме.",
+	"Settings_Camera_RoomView3D_Unsupported": "3D-обзор комнаты несовместим с этим шлемом или конфигурацией системы.",
 	"Settings_CameraTest": "Проверка камеры и её производительности",
 	"Settings_StartCameraTest": "Начать проверку",
 	"CameraTest_CheckingCamera": "Проверка камеры...",
@@ -330,6 +330,15 @@
 	"Settings_Drivers_UnblockAll": "Разблокировать все",
 	"Settings_Drivers_UnblockAllTip": "ВНИМАНИЕ: рекомендуется разблокировать и тестировать дополнения по одному.",
 	"Settings_Drivers_SomeBlocked": "Из-за недавнего сбоя некоторые дополнения SteamVR были автоматически заблокированы.",
+	"Settings_CurrentOpenXRRuntime_None": "Нет",
+	"Settings_CurrentOpenXRRuntime": "Текущая среда выполнения OpenXR:",
+	"Settings_SetAsOpenXRRuntime": "Задать SteamVR как среду выполнения OpenXR",
+	"OpenXR_AnotherSteamVR": "Другая копия SteamVR",
+	"OpenXR_SteamVR": "SteamVR",
+	"OpenXR_None": "Нет",
+	"OpenXR_Error": "Ошибка поиска среды выполнения",
+	"OpenXR_OculusRuntime": "Oculus",
+	"OpenXR_WindowsMixedReality": "Windows Mixed Reality",
 	"TestControllerTitle": "Проверка контроллера %1$s",
 	"TestController_NoController": "Включите контроллер для проверки."
 }
