--- a/resources/webinterface/dashboard/localization/vrmonitor_schinese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_schinese.json
@@ -193,8 +193,8 @@
 	"Settings_Camera_RoomViewStyle_EdgeB": "彩色重影",
 	"Settings_Camera_RoomViewStyle_VideoTranslucent": "半透明穿透",
 	"Settings_Camera_RoomViewStyle_VideoOpaque": "不透明穿透",
-	"Settings_Camera_RoomView3D_Experimental": "3D 房间视角尚处于实验阶段",
-	"Settings_Camera_RoomView3D_Unsupported": "此头戴式显示器不支持 3D 房间视角",
+	"Settings_Camera_RoomView3D_Experimental": "Room View 3D is experimental.",
+	"Settings_Camera_RoomView3D_Unsupported": "Room View 3D is not supported on this headset / system configuration.",
 	"Settings_CameraTest": "测试摄像头和性能",
 	"Settings_StartCameraTest": "开始测试",
 	"CameraTest_CheckingCamera": "正在检查摄像头…",
@@ -330,6 +330,15 @@
 	"Settings_Drivers_UnblockAll": "取消所有屏蔽",
 	"Settings_Drivers_UnblockAllTip": "注意：建议每次取消一个加载项的屏蔽并测试。",
 	"Settings_Drivers_SomeBlocked": "由于最近的崩溃，某些 SteamVR 加载项已被自动屏蔽。",
+	"Settings_CurrentOpenXRRuntime_None": "None",
+	"Settings_CurrentOpenXRRuntime": "Current OpenXR Runtime:",
+	"Settings_SetAsOpenXRRuntime": "Set SteamVR as OpenXR Runtime",
+	"OpenXR_AnotherSteamVR": "Another copy of SteamVR",
+	"OpenXR_SteamVR": "SteamVR",
+	"OpenXR_None": "None",
+	"OpenXR_Error": "Error Finding Runtime",
+	"OpenXR_OculusRuntime": "Oculus",
+	"OpenXR_WindowsMixedReality": "Windows Mixed Reality",
 	"TestControllerTitle": "测试控制器 %1$s",
 	"TestController_NoController": "开启控制器以进行测试。"
 }
