--- a/resources/webinterface/dashboard/localization/vrmonitor_spanish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_spanish.json
@@ -194,7 +194,7 @@
 	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Paso translúcido",
 	"Settings_Camera_RoomViewStyle_VideoOpaque": "Paso opaco",
 	"Settings_Camera_RoomView3D_Experimental": "La vista de la habitación en 3D es experimental.",
-	"Settings_Camera_RoomView3D_Unsupported": "La vista de habitación en 3D no es compatible con este visor.",
+	"Settings_Camera_RoomView3D_Unsupported": "La vista de la habitación en 3D no es compatible con esta configuración de visor/sistema.",
 	"Settings_CameraTest": "Probar cámara y rendimiento",
 	"Settings_StartCameraTest": "Iniciar prueba",
 	"CameraTest_CheckingCamera": "Comprobando la cámara...",
@@ -330,6 +330,15 @@
 	"Settings_Drivers_UnblockAll": "Desbloquear todos",
 	"Settings_Drivers_UnblockAllTip": "AVISO: Se recomienda desbloquear y probar los complementos de uno en uno.",
 	"Settings_Drivers_SomeBlocked": "Debido a un reciente bloqueo, algunos complementos de SteamVR se han bloqueado automáticamente.",
+	"Settings_CurrentOpenXRRuntime_None": "Ninguno",
+	"Settings_CurrentOpenXRRuntime": "OpenXR Runtime actual:",
+	"Settings_SetAsOpenXRRuntime": "Establecer SteamVR como OpenXR Runtime",
+	"OpenXR_AnotherSteamVR": "Otra copia de SteamVR",
+	"OpenXR_SteamVR": "SteamVR",
+	"OpenXR_None": "Ninguno",
+	"OpenXR_Error": "Error de Runtime",
+	"OpenXR_OculusRuntime": "Oculus",
+	"OpenXR_WindowsMixedReality": "Windows Mixed Reality",
 	"TestControllerTitle": "Probando mando %1$s",
 	"TestController_NoController": "Encender el mando para probarlo."
 }
