--- a/resources/webinterface/dashboard/localization/vrmonitor_swedish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_swedish.json
@@ -193,8 +193,8 @@
 	"Settings_Camera_RoomViewStyle_EdgeB": "Färgade silhuetter",
 	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Genomskinlig genomströmning",
 	"Settings_Camera_RoomViewStyle_VideoOpaque": "Ogenomskinlig genomströmning",
-	"Settings_Camera_RoomView3D_Experimental": "3D-rumsvyn är experimentell.",
-	"Settings_Camera_RoomView3D_Unsupported": "3D-rumsvy stöds inte av detta headset.",
+	"Settings_Camera_RoomView3D_Experimental": "Rumsvy i 3D är experimentell.",
+	"Settings_Camera_RoomView3D_Unsupported": "Rumsvy i 3D stöds inte av detta headset/denna systemkonfigurering.",
 	"Settings_CameraTest": "Testa kamera och prestanda",
 	"Settings_StartCameraTest": "Påbörja test",
 	"CameraTest_CheckingCamera": "Kontrollerar kamera ...",
@@ -330,6 +330,15 @@
 	"Settings_Drivers_UnblockAll": "Ta bort alla blockeringar",
 	"Settings_Drivers_UnblockAllTip": "OBS: Det rekommenderas att du ta bort en blockering och testar ett tillägg i taget.",
 	"Settings_Drivers_SomeBlocked": "På grund av en krasch som skedde nyligen, har vissa SteamVR-tillägg automatiskt blockerats.",
+	"Settings_CurrentOpenXRRuntime_None": "None",
+	"Settings_CurrentOpenXRRuntime": "Nuvarande OpenXR Runtime:",
+	"Settings_SetAsOpenXRRuntime": "Ställ in SteamVR som OpenXR Runtime",
+	"OpenXR_AnotherSteamVR": "En till kopia av SteamVR",
+	"OpenXR_SteamVR": "SteamVR",
+	"OpenXR_None": "None",
+	"OpenXR_Error": "Kunde inte hitta Runtime",
+	"OpenXR_OculusRuntime": "Oculus",
+	"OpenXR_WindowsMixedReality": "Windows Mixed Reality",
 	"TestControllerTitle": "Testar kontroll %1$s",
 	"TestController_NoController": "Sätt på en kontroll för att testa den."
 }
