--- a/resources/webinterface/dashboard/localization/vrmonitor_tchinese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_tchinese.json
@@ -193,8 +193,8 @@
 	"Settings_Camera_RoomViewStyle_EdgeB": "彩色重影",
 	"Settings_Camera_RoomViewStyle_VideoTranslucent": "半透明穿透",
 	"Settings_Camera_RoomViewStyle_VideoOpaque": "不透明穿透",
-	"Settings_Camera_RoomView3D_Experimental": "3D 房間視角尚在實驗階段。",
-	"Settings_Camera_RoomView3D_Unsupported": "此頭戴顯示器不支援 3D 房間視角。",
+	"Settings_Camera_RoomView3D_Experimental": "房間視角 3D 尚在實驗階段。",
+	"Settings_Camera_RoomView3D_Unsupported": "此頭戴顯示器 / 系統設定不支援房間視角 3D。",
 	"Settings_CameraTest": "測試鏡頭與效能",
 	"Settings_StartCameraTest": "開始測試",
 	"CameraTest_CheckingCamera": "正在檢查鏡頭…",
@@ -330,6 +330,15 @@
 	"Settings_Drivers_UnblockAll": "取消所有封鎖",
 	"Settings_Drivers_UnblockAllTip": "注意：建議一次只取消封鎖並測試一個附加元件。",
 	"Settings_Drivers_SomeBlocked": "由於最近的當機，某些 SteamVR 的附加元件已自動被封鎖。",
+	"Settings_CurrentOpenXRRuntime_None": "無",
+	"Settings_CurrentOpenXRRuntime": "目前 OpenXR 執行階段：",
+	"Settings_SetAsOpenXRRuntime": "將 SteamVR 設為 OpenXR 執行階段",
+	"OpenXR_AnotherSteamVR": "SteamVR 的另一副本",
+	"OpenXR_SteamVR": "SteamVR",
+	"OpenXR_None": "無",
+	"OpenXR_Error": "尋找執行階段時發生錯誤",
+	"OpenXR_OculusRuntime": "Oculus",
+	"OpenXR_WindowsMixedReality": "Windows Mixed Reality",
 	"TestControllerTitle": "測試控制器 %1$s",
 	"TestController_NoController": "開啟控制器以進行測試。"
 }
