--- a/resources/webinterface/dashboard/localization/vrmonitor_thai.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_thai.json
@@ -194,7 +194,7 @@
 	"Settings_Camera_RoomViewStyle_VideoTranslucent": "มองผ่านแบบโปร่งแสง",
 	"Settings_Camera_RoomViewStyle_VideoOpaque": "มองผ่านแบบทึบแสง",
 	"Settings_Camera_RoomView3D_Experimental": "มุมมองห้องแบบ 3 มิติอยู่ในขั้นทดลอง",
-	"Settings_Camera_RoomView3D_Unsupported": "เครื่องสวมศีรษะนี้ไม่รองรับมุมมองห้องแบบ 3 มิติ",
+	"Settings_Camera_RoomView3D_Unsupported": "การกำหนดค่าเครื่องสวมศีรษะ/ระบบนี้ไม่รองรับมุมมองห้องแบบ 3 มิติ",
 	"Settings_CameraTest": "ทดสอบกล้องและประสิทธิภาพ",
 	"Settings_StartCameraTest": "เริ่มต้นทดสอบ",
 	"CameraTest_CheckingCamera": "กำลังตรวจสอบกล้อง...",
@@ -330,6 +330,15 @@
 	"Settings_Drivers_UnblockAll": "เลิกบล็อกทั้งหมด",
 	"Settings_Drivers_UnblockAllTip": "หมายเหตุ: ขอแนะนำให้เลิกบล็อกและทดสอบส่วนเสริมครั้งละส่วน",
 	"Settings_Drivers_SomeBlocked": "เนื่องจากการแครชเมื่อเร็ว ๆ นี้ จึงได้บล็อกส่วนเสริม SteamVR บางส่วนไว้โดยอัตโนมัติ",
+	"Settings_CurrentOpenXRRuntime_None": "ไม่มี",
+	"Settings_CurrentOpenXRRuntime": "รันไทม์ของ OpenXR ในปัจจุบัน:",
+	"Settings_SetAsOpenXRRuntime": "ตั้งค่า SteamVR เป็นรันไทม์ของ OpenXR",
+	"OpenXR_AnotherSteamVR": "SteamVR อีกชุดหนึ่ง",
+	"OpenXR_SteamVR": "SteamVR",
+	"OpenXR_None": "ไม่มี",
+	"OpenXR_Error": "ข้อผิดพลาดในการค้นหารันไทม์",
+	"OpenXR_OculusRuntime": "Oculus",
+	"OpenXR_WindowsMixedReality": "Windows Mixed Reality",
 	"TestControllerTitle": "ทดสอบคอนโทรลเลอร์ %1$s",
 	"TestController_NoController": "เปิดคอนโทรลเลอร์เพื่อทดสอบ"
 }
