--- a/resources/webinterface/dashboard/localization/vrmonitor_turkish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_turkish.json
@@ -193,8 +193,8 @@
 	"Settings_Camera_RoomViewStyle_EdgeB": "Colored Ghosts",
 	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Translucent Pass-Through",
 	"Settings_Camera_RoomViewStyle_VideoOpaque": "Opaque Pass-Through",
-	"Settings_Camera_RoomView3D_Experimental": "3-D Room View is experimental.",
-	"Settings_Camera_RoomView3D_Unsupported": "3-D Room View is not supported on this headset.",
+	"Settings_Camera_RoomView3D_Experimental": "3 Boyutlu Oda Görünümü deneyseldir.",
+	"Settings_Camera_RoomView3D_Unsupported": "3 Boyutlu Oda Görünümü bu başlıkta veya sistem yapılandırmasında desteklenmiyor.",
 	"Settings_CameraTest": "Test camera and performance",
 	"Settings_StartCameraTest": "Start Test",
 	"CameraTest_CheckingCamera": "Checking camera...",
@@ -330,6 +330,15 @@
 	"Settings_Drivers_UnblockAll": "Tümünün Engelini Kaldı",
 	"Settings_Drivers_UnblockAllTip": "NOT: Aynı anda bir eklentinin engelini kaldırmanız ve test etmeniz önerilir.",
 	"Settings_Drivers_SomeBlocked": "En son gerçekleşen hatadan ötürü bazı SteamVR eklentileri otomatik olarak engellendi.",
+	"Settings_CurrentOpenXRRuntime_None": "Yok",
+	"Settings_CurrentOpenXRRuntime": "Mevcut OpenXR runtime'ı:",
+	"Settings_SetAsOpenXRRuntime": "SteamVR'ı OpenXR Runtime Olarak Ayarla",
+	"OpenXR_AnotherSteamVR": "SteamVR'ın başka bir kopyası",
+	"OpenXR_SteamVR": "SteamVR",
+	"OpenXR_None": "Yok",
+	"OpenXR_Error": "Runtime bulunurken hata oluştu",
+	"OpenXR_OculusRuntime": "Oculus",
+	"OpenXR_WindowsMixedReality": "Windows Mixed Reality",
 	"TestControllerTitle": "Testing Controller %1$s",
 	"TestController_NoController": "Turn on a controller to test it."
 }
