--- a/resources/webinterface/dashboard/localization/vrmonitor_czech.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_czech.json
@@ -194,7 +194,7 @@
 	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Průhledné objekty",
 	"Settings_Camera_RoomViewStyle_VideoOpaque": "Neprůhledné objekty",
 	"Settings_Camera_RoomView3D_Experimental": "3D pohled ven je experimentální funkce.",
-	"Settings_Camera_RoomView3D_Unsupported": "3D pohled ven není na tomto headsetu podporován.",
+	"Settings_Camera_RoomView3D_Unsupported": "3D pohled ven není na tomto headsetu/systému podporován.",
 	"Settings_CameraTest": "Test kamery a výkonu",
 	"Settings_StartCameraTest": "Zahájit test",
 	"CameraTest_CheckingCamera": "Kontrola kamery...",
@@ -330,6 +330,15 @@
 	"Settings_Drivers_UnblockAll": "Odblokovat všechny",
 	"Settings_Drivers_UnblockAllTip": "POZNÁMKA: Doporučujeme vždy odblokovat a otestovat jeden doplněk.",
 	"Settings_Drivers_SomeBlocked": "Vlivem nedávného pádu byly automaticky zablokovány některé doplňky režimu SteamVR.",
+	"Settings_CurrentOpenXRRuntime_None": "Žádný",
+	"Settings_CurrentOpenXRRuntime": "Momentální OpenXR runtime:",
+	"Settings_SetAsOpenXRRuntime": "Nastavit režim SteamVR jako OpenXR runtime",
+	"OpenXR_AnotherSteamVR": "Další kopie režimu SteamVR",
+	"OpenXR_SteamVR": "SteamVR",
+	"OpenXR_None": "Žádný",
+	"OpenXR_Error": "Chyba při hledání runtimu",
+	"OpenXR_OculusRuntime": "Oculus",
+	"OpenXR_WindowsMixedReality": "Windows Mixed Reality",
 	"TestControllerTitle": "Testování ovladače „%1$s“",
 	"TestController_NoController": "Pro otestování ovladače ho zapněte."
 }
