--- a/resources/webinterface/dashboard/localization/vrmonitor_danish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_danish.json
@@ -194,7 +194,7 @@
 	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Gennemsigtig overgang",
 	"Settings_Camera_RoomViewStyle_VideoOpaque": "Uigennemsigtig overgang",
 	"Settings_Camera_RoomView3D_Experimental": "3D-rumvisning er eksperimentel.",
-	"Settings_Camera_RoomView3D_Unsupported": "3D-rumvisning understøttes ikke af dette headset.",
+	"Settings_Camera_RoomView3D_Unsupported": "3D-rumvisning understøttes ikke på dette headset eller denne systemkonfiguration.",
 	"Settings_CameraTest": "Test kamera og ydeevne",
 	"Settings_StartCameraTest": "Start test",
 	"CameraTest_CheckingCamera": "Kontrollerer kamera...",
@@ -330,6 +330,15 @@
 	"Settings_Drivers_UnblockAll": "Fjern blokeringen for alle",
 	"Settings_Drivers_UnblockAllTip": "BEMÆRK: Det anbefales at fjerne blokeringen fra én tilføjelse af gangen.",
 	"Settings_Drivers_SomeBlocked": "På grund af et nyligt nedbrud vil nogle SteamVR-tilføjelser automatisk blive blokeret.",
+	"Settings_CurrentOpenXRRuntime_None": "Ingen",
+	"Settings_CurrentOpenXRRuntime": "Aktuel OpenXR-kørsel:",
+	"Settings_SetAsOpenXRRuntime": "Angiv SteamVR som OpenXR-kørsel",
+	"OpenXR_AnotherSteamVR": "En anden kopi af SteamVR",
+	"OpenXR_SteamVR": "SteamVR",
+	"OpenXR_None": "Ingen",
+	"OpenXR_Error": "Kunne ikke finde kørsel",
+	"OpenXR_OculusRuntime": "Oculus",
+	"OpenXR_WindowsMixedReality": "Windows Mixed Reality",
 	"TestControllerTitle": "Tester controller %1$s",
 	"TestController_NoController": "Tænd en controller for at teste den."
 }
