--- a/resources/webinterface/dashboard/localization/vrmonitor_norwegian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_norwegian.json
@@ -194,7 +194,7 @@
 	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Gjennomsiktig overgang",
 	"Settings_Camera_RoomViewStyle_VideoOpaque": "Ugjennomsiktig overgang",
 	"Settings_Camera_RoomView3D_Experimental": "3D-romvisningen er eksperimentell.",
-	"Settings_Camera_RoomView3D_Unsupported": "3D-romvisning støttes ikke av dette hodesettet.",
+	"Settings_Camera_RoomView3D_Unsupported": "3D-romvisning støttes ikke av dette hodesettet eller denne systemkonfigurasjonen.",
 	"Settings_CameraTest": "Test kamera og ytelse",
 	"Settings_StartCameraTest": "Start test",
 	"CameraTest_CheckingCamera": "Sjekker kamera...",
@@ -330,6 +330,15 @@
 	"Settings_Drivers_UnblockAll": "Fjern blokkering av alle",
 	"Settings_Drivers_UnblockAllTip": "MERK: Det anbefales å fjerne og teste ett tillegg om gangen.",
 	"Settings_Drivers_SomeBlocked": "Noen SteamVR-tillegg er automatisk blitt blokkerte på grunn av en nylig krasj.",
+	"Settings_CurrentOpenXRRuntime_None": "Ingen",
+	"Settings_CurrentOpenXRRuntime": "Gjeldende OpenXR-runtime:",
+	"Settings_SetAsOpenXRRuntime": "Angi SteamVR som OpenXR-runtime",
+	"OpenXR_AnotherSteamVR": "En annen kopi av SteamVR",
+	"OpenXR_SteamVR": "SteamVR",
+	"OpenXR_None": "Ingen",
+	"OpenXR_Error": "Fant ikke runtime",
+	"OpenXR_OculusRuntime": "Oculus",
+	"OpenXR_WindowsMixedReality": "Windows Mixed Reality",
 	"TestControllerTitle": "Tester kontrolleren %1$s",
 	"TestController_NoController": "Slå på en kontroller for å teste den."
 }
