--- a/resources/webinterface/dashboard/localization/vrmonitor_portuguese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_portuguese.json
@@ -194,7 +194,7 @@
 	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Vista translúcida",
 	"Settings_Camera_RoomViewStyle_VideoOpaque": "Vista opaca",
 	"Settings_Camera_RoomView3D_Experimental": "A vista da divisão em 3D é experimental.",
-	"Settings_Camera_RoomView3D_Unsupported": "A vista da divisão em 3D não é compatível com este headset.",
+	"Settings_Camera_RoomView3D_Unsupported": "A vista da divisão em 3D não é compatível com este headset ou configuração de sistema.",
 	"Settings_CameraTest": "Testar câmara e desempenho",
 	"Settings_StartCameraTest": "Iniciar teste",
 	"CameraTest_CheckingCamera": "A verificar câmara...",
@@ -330,6 +330,15 @@
 	"Settings_Drivers_UnblockAll": "Desbloquear todos",
 	"Settings_Drivers_UnblockAllTip": "ATENÇÃO: É recomendado desbloquear e testar um add-on de cada vez.",
 	"Settings_Drivers_SomeBlocked": "Devido a uma falha crítica recente, alguns add-ons do SteamVR foram bloqueados automaticamente.",
+	"Settings_CurrentOpenXRRuntime_None": "Nenhum",
+	"Settings_CurrentOpenXRRuntime": "Runtime do OpenXR atual:",
+	"Settings_SetAsOpenXRRuntime": "Definir o SteamVR como runtime do OpenXR",
+	"OpenXR_AnotherSteamVR": "Outra cópia do SteamVR",
+	"OpenXR_SteamVR": "SteamVR",
+	"OpenXR_None": "Nenhum",
+	"OpenXR_Error": "Erro ao encontrar runtime",
+	"OpenXR_OculusRuntime": "Oculus",
+	"OpenXR_WindowsMixedReality": "Windows Mixed Reality",
 	"TestControllerTitle": "A testar comando %1$s",
 	"TestController_NoController": "Liga um comando para testá-lo."
 }
