--- a/resources/webinterface/dashboard/localization/vrmonitor_ukrainian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_ukrainian.json
@@ -194,7 +194,7 @@
 	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Напівпрозоре ретранслювання",
 	"Settings_Camera_RoomViewStyle_VideoOpaque": "Непрозоре ретранслювання",
 	"Settings_Camera_RoomView3D_Experimental": "3D-огляд кімнати — експериментальна функція.",
-	"Settings_Camera_RoomView3D_Unsupported": "3D-огляд кімнати не підтримується цим шоломом.",
+	"Settings_Camera_RoomView3D_Unsupported": "Цей шолом чи системна конфігурація не підтримують 3D-огляд кімнати.",
 	"Settings_CameraTest": "Перевірка камери та її швидкодії",
 	"Settings_StartCameraTest": "Почати перевірку",
 	"CameraTest_CheckingCamera": "Перевірка камери…",
@@ -330,6 +330,15 @@
 	"Settings_Drivers_UnblockAll": "Розблокувати все",
 	"Settings_Drivers_UnblockAllTip": "ПРИМІТКА: рекомендується розблоковувати й тестувати доповнення по черзі.",
 	"Settings_Drivers_SomeBlocked": "У зв’язку з нещодавнім аварійним завершенням деякі доповнення SteamVR були автоматично заблоковані.",
+	"Settings_CurrentOpenXRRuntime_None": "жодного",
+	"Settings_CurrentOpenXRRuntime": "Поточне середовище виконання OpenXR:",
+	"Settings_SetAsOpenXRRuntime": "Установити SteamVR як середовище виконання OpenXR",
+	"OpenXR_AnotherSteamVR": "Інша копія SteamVR",
+	"OpenXR_SteamVR": "SteamVR",
+	"OpenXR_None": "жодного",
+	"OpenXR_Error": "Не вдалося знайти середовище виконання",
+	"OpenXR_OculusRuntime": "Oculus",
+	"OpenXR_WindowsMixedReality": "Windows Mixed Reality",
 	"TestControllerTitle": "Перевірка контролера %1$s",
 	"TestController_NoController": "Увімкніть контролер, щоби перевірити його."
 }
